# trendegde

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md
backend/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_12_0001_initial_schema.py  2026_02_12_0002_add_profile_columns.py  2026_02_12_0003_broker_connections.py  2026_02_12_0004_api_keys.py  2026_02_12_0005_trendline_detection.py  2026_02_12_0006_execution_pipeline.py
backend/app/: dependencies.py  main.py
backend/app/adapters/: __init__.py  base.py  exceptions.py  ibkr.py  paper.py  registry.py  tradovate.py  types.py
backend/app/core/: api_key_auth.py  cache.py  config.py  exceptions.py  logging.py  middleware.py  permissions.py  rate_limit.py  redis.py  security.py
backend/app/db/: base.py  seed_execution.py  session.py
backend/app/scripts/: seed.py
backend/app/services/: api_key_service.py  auth_service.py  broker_service.py  encryption_service.py  execution_service.py  market_data_service.py  profile_service.py  risk_service.py  signal_service.py  trendline_service.py
backend/app/tasks/: celery_app.py  execution_tasks.py  trendline_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_db_health.py  test_execution_pipeline.py  test_execution_routes.py  test_redis_health.py  test_trendline_pipeline.py
backend/tests/unit/: test_config.py  test_detection_engine.py  test_error_handling.py  test_execution_service.py  test_health.py  test_middleware.py  (+3 more)
(+187 files in other folders)
